--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+h1 {
+    text-align: center;
+    background-color: red;
+    color: white;
+    padding: 50px;
+}
+
 #calculator {
-    /* max-width: 700px; */
     margin: 0 auto;
     border-radius: 5px;
     background-color: #f2f2f2;
@@ -30,7 +36,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: rgb(236, 12, 12);
+    background-color: red;
     color: white;
 }
 
@@ -47,26 +53,21 @@ select {
 
 input[type=submit] {
     width: 100%;
-    background-color: rgb(236, 12, 12);
+    background-color: red;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: medium;
 }
 
 input[type=submit]:hover {
     background-color: rgb(194, 20, 20);
 }
 
-h1 {
-    text-align: center;
-    background-color: red;
-    color: white;
-    padding: 50px;
-}
-
 #totalMonthlySalary {
     text-align: right;
+    padding: 15px 20px;
 }
