--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
     text-align: center;
-    background-color: red;
+    background-color: blue;
     color: white;
     padding: 50px;
 }
@@ -36,7 +36,7 @@ h1 {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: red;
+    background-color: blue;
     color: white;
 }
 
@@ -53,7 +53,7 @@ select {
 
 input[type=submit] {
     width: 100%;
-    background-color: red;
+    background-color: blue;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -64,7 +64,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: rgb(194, 20, 20);
+    background-color: rgb(0, 0, 187);
 }
 
 #totalMonthlySalary {
