--- a/server/public/style.css
+++ b/server/public/style.css
@@ -61,7 +61,8 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: medium;
+    font-size: large;
+    font-weight: bold;
 }
 
 input[type=submit]:hover {
